# esibot-ros2

./: .gitignore  README.md  REFACTOR_PLAN.md  launch_robot.sh
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.jsx  config.js
dashboard/src/components/: BatteryPanel.jsx  ConnectionPanel.jsx  Header.jsx  LoginPage.jsx  MapCanvas.jsx  ServoGauge.jsx  Teleop.jsx  Toast.jsx  VideoFeed.jsx
dashboard/src/context/: AuthContext.jsx  RosbridgeContext.jsx  ThemeContext.jsx
dashboard/src/hooks/: useBattery.js  useCamera.js  useDetections.js  useEsp32Ip.js  useMap.js  useOdom.js  useRosbridge.js  useScan.js  useServo.js  useSystemStatus.js
dashboard/src/styles/: index.css
dashboard/src/utils/: mapUtils.js
docs/: ARCHITECTURE.md  esibot_map.pgm  esibot_map.yaml
docs/plans/: 2026-05-19-gpio-direct-wiring-design.md  2026-05-19-pivot-turn-design.md  2026-05-21-cyclonedds-local-discovery-fix.md
esibot_bringup/: README.md  README.md.save  package.xml  setup.cfg  setup.py
esibot_bringup/config/: cyclone_pi.xml  driver_params.yaml  esibot_rviz.rviz  joy_params.yaml
esibot_bringup/esibot_bringup/: esibot_driver.py
esibot_bringup/firmware/: esibot_esp32_firmware.ino
esibot_bringup/firmware/esibot_esp32_wifi/: esibot_esp32_wifi.ino
esibot_bringup/launch/: bringup.launch.py  joy_teleop.launch.py  robot.launch.py
esibot_bringup/test/: test_smoke.py
esibot_camera/: CMakeLists.txt  README.md  fake_esp32_server.py  package.xml  setup.py
esibot_camera/config/: camera_params.yaml
esibot_camera/esibot_camera/: camera_stream_node.py  mjpeg_proxy.py
esibot_camera/launch/: camera.launch.py  esibot_camera.launch.py
esibot_description/: CMakeLists.txt  package.xml
esibot_description/launch/: display.launch.py  full.launch.py
esibot_description/urdf/: esibot.urdf.xacro  materials.xacro
esibot_gazebo/: CMakeLists.txt  package.xml
esibot_gazebo/config/: gz_bridge.yaml
esibot_gazebo/launch/: sim.launch.py
esibot_gazebo/worlds/: esibot_world.sdf
esibot_logging/: package.xml  setup.cfg  setup.py
esibot_logging/esibot_logging/: __init__.py  logging_utils.py
esibot_logging/resource/: esibot_logging
esibot_logging/test/: test_smoke.py
esibot_nav2/: CMakeLists.txt  package.xml
esibot_nav2/config/: nav2_params.yaml
esibot_nav2/launch/: nav2.launch.py
esibot_navigation/: CMakeLists.txt  README.md  package.xml
esibot_navigation/config/: nav2_params.yaml
esibot_navigation/launch/: localization_launch.py  nav2.launch.py  navigation_launch.py
esibot_navigation/maps/: esibot_map.pgm  esibot_map.yaml
esibot_sensors/: README.md  package.xml  setup.cfg  setup.py
esibot_sensors/esibot_sensors/: radar_node.py
esibot_sensors/launch/: radar.launch.py
esibot_slam/: CMakeLists.txt  README.md  package.xml
esibot_slam/config/: esibot_slam.rviz  slam_params_hw.yaml  slam_params_sim.yaml
esibot_slam/launch/: save_map.launch.py  slam.launch.py  slam_sim.launch.py
esibot_slam/maps/: README.md
esibot_ui/: README.md  package.xml  setup.cfg  setup.py
esibot_ui/esibot_ui/: dashboard_node.py  map_saver_node.py  nav_goal_proxy.py
esibot_ui/launch/: dashboard.launch.py
esibot_ui/scripts/: gen_auth.py
esibot_ui/web/: index.html
esibot_ui/web/assets/: index--GoRNUhp.css  index-BJFh3Kdb.js  index-BOnZu7M_.js  index-Bjq282z3.js  index-CC1u43rK.js  index-CDFTmY1D.js  index-CejF0hTj.js  index-CfjDQNIo.js  index-Cwks7afT.js  index-D4oA4mrI.css  index-DDqqFmwW.js  index-DG1A6G2y.js  index-DcpX5ygS.css  index-DuyKUJtK.css  index-DwtjC96i.css  index-Pb7VfsN9.js  index-WlUkpvJ_.css  index-gbPajkBy.css  index-kfPvzWCj.css  index-n51BviW0.js
esibot_vision/: CMakeLists.txt  README.md  package.xml  requirements.txt
esibot_vision/config/: vision_params.yaml
esibot_vision/esibot_vision/: config.py  lane_detector.py  obstacle_detector.py  sign_detector.py  utils.py  vision_node.py
esibot_vision/launch/: vision.launch.py
esibot_vision/scripts/: prepare_gtsrb.py  train_signs.py
tools/: README.md  launch_rviz.sh  project_snapshot.sh  stop_robot.sh
web_bridge/: package.xml  setup.py
web_bridge/config/: rosbridge_params.yaml
web_bridge/launch/: web_bridge.launch.py
