<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>esibot_bringup</name>
  <version>0.1.0</version>
  <description>
    EsiBot bringup package — esibot_driver node.
    Bridges the ESP32 (motors + encoders) and ROS2.
    Publishes /odom, broadcasts /tf, subscribes to /cmd_vel.
  </description>

  <maintainer email="team@esibot.local">EsiBot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>teleop_twist_keyboard</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
