<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>esibot_bringup</name>
  <version>0.1.0</version>
  <description>
    EsiBot bringup package - esibot_driver node.
    Bridges the ESP32 (motors + encoders) and ROS 2.
    Publishes odom, broadcasts TF, subscribes to cmd_vel.
  </description>

  <maintainer email="mm_kherroubi@esi.dz">EsiBot Team</maintainer>
  <maintainer email="mr_zitouni@esi.dz">EsiBot Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
