<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>esibot_bringup</name>
  <version>0.1.0</version>
  <description>
    EsiBot bringup package - esibot_driver node.
    Bridges the ESP32 (motors + encoders) and ROS 2.
    Publishes odom, broadcasts TF, subscribes to cmd_vel.
  </description>

  <maintainer email="ms_hasnaoui@esi.dz">Sarah Hasnaoui</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>esibot_logging</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
