<?xml version="1.0"?>
<package format="3">
  <name>esibot_logging</name>
  <version>0.0.1</version>
  <description>Shared logging utilities for EsiBot packages.</description>
  <maintainer email="team@esibot.local">EsiBot Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
