<?xml version="1.0"?>
<package format="3">
  <name>esibot_logging</name>
  <version>0.0.1</version>
  <description>Shared logging utilities for EsiBot packages.</description>
  <maintainer email="mm_kherroubi@esi.dz">Mohamed El Amine Kherroubi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
