<?xml version="1.0"?>
<package format="3">
  <name>esibot_navigation</name>
  <version>0.1.0</version>
  <description>Nav2 bringup and configuration for EsiBot</description>
  <maintainer email="mm_kherroubi@esi.dz">Team EsiBot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>opennav_docking</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
