<?xml version="1.0"?>
<package format="3">
  <name>esibot_vision</name>
  <version>0.0.1</version>
  <description>EsiBot vision - lane (OpenCV) + signs YOLOv8n (GTSRB) + obstacles YOLOv8n (COCO).</description>
  <maintainer email="idriss.ziadi47@gmail.com">ziadi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
